# advanced_pp_track

./: README.md  read me  track_carto_pp.cpp
src/MYROBOT_description/: CMakeLists.txt  model.config  package.xml
src/MYROBOT_description/urdf/: agv.urdf
src/MYROBOT_gazebo/: CMakeLists.txt  package.xml
src/MYROBOT_gazebo/launch/: MYROBOT.launch
src/moving/: CMakeLists.txt  package.xml
src/moving/src/: .start.cpp.swp  adv_start.cpp  can_send.cpp  detct.cpp  fuzzy.cpp  listener.cpp  listener_tf.cpp  path_demo.cpp  path_track.cpp  pose.cpp  spline.cpp  start.cpp  talker.cpp  tar_theta.cpp  tra_receive.cpp  track_10.cpp  track_agv.cpp  track_carto.cpp  track_carto_10.cpp  track_carto_curv.cpp  track_carto_fast.cpp  track_carto_line.cpp  track_carto_pp.cpp  track_carto_ym.cpp  track_con.cpp  track_demo.cpp  track_fangyi.cpp  track_fast_ym.cpp  track_gd_curv.cpp  track_gd_line.cpp  track_line.cpp  track_plan.cpp  track_pp.cpp  track_ym.cpp  ym_point.cpp
src/shake/: CMakeLists.txt  package.xml
src/shake/src/: dec.cpp  pcd_write.cpp
